--- a/.legacy/index.html
+++ b/.legacy/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Achive</h1>
-    <a href="./achive/SQLD.md">SQLD</ㅁ>
+    <a href="./achive/SQLD.html">SQLD</a>
     <h1>Project</h2>
     <h1>Diary</h1>
 </body>
